--- a/Javascript.css
+++ b/Javascript.css
@@ -22,25 +22,22 @@
 .u-section-3 .u-text-2 {margin: 20px 109px 0}
 .u-section-3 .u-text-3 {margin: 20px auto 0}
 .u-section-3 .u-btn-1 {margin: 30px auto 0}
-.u-section-3 .u-text-4 {margin: 30px 92px 0}
+.u-section-3 .u-text-4 {margin: 30px 0 0}
 .u-section-3 .u-text-5 {animation-duration: 1000ms; margin: 20px auto 50px} 
 
-@media (max-width: 1199px){ .u-section-3 .u-text-2 {margin-left: 90px; margin-right: 90px}
-.u-section-3 .u-text-4 {margin-left: 76px; margin-right: 76px} }
+@media (max-width: 1199px){ .u-section-3 .u-text-2 {margin-left: 90px; margin-right: 90px} }
 
-@media (max-width: 991px){ .u-section-3 .u-text-2 {margin-left: 69px; margin-right: 69px}
-.u-section-3 .u-text-4 {margin-left: 58px; margin-right: 58px} }
+@media (max-width: 991px){ .u-section-3 .u-text-2 {margin-left: 69px; margin-right: 69px} }
 
 @media (max-width: 767px){ .u-section-3 .u-text-1 {width: 540px}
-.u-section-3 .u-text-2 {margin-left: 52px; margin-right: 52px}
-.u-section-3 .u-text-4 {margin-left: 44px; margin-right: 44px} }
+.u-section-3 .u-text-2 {margin-left: 52px; margin-right: 52px} }
 
 @media (max-width: 575px){ .u-section-3 .u-text-1 {width: 340px}
-.u-section-3 .u-text-2 {margin-left: 33px; margin-right: 33px}
-.u-section-3 .u-text-4 {margin-left: 28px; margin-right: 28px} }.u-section-4 .u-sheet-1 {min-height: 500px}
+.u-section-3 .u-text-2 {margin-left: 33px; margin-right: 33px} }.u-section-4 .u-sheet-1 {min-height: 500px}
 .u-section-4 .u-text-1 {margin-left: auto; margin-right: auto; margin-bottom: 0}
-.u-section-4 .u-text-2 {margin: 20px 92px 0}
-.u-section-4 .u-text-3 {margin: 20px 92px 60px} 
+.u-section-4 .u-btn-1 {margin: 20px auto 0}
+.u-section-4 .u-text-2 {margin: 20px auto 0}
+.u-section-4 .u-text-3 {margin: 20px 77px 0} 
 
 @media (max-width: 1199px){ .u-section-4 .u-text-2 {margin-left: 75px; margin-right: 75px}
 .u-section-4 .u-text-3 {margin-left: 75px; margin-right: 75px} }
