--- a/404.css
+++ b/404.css
@@ -1,7 +1,7 @@
-.u-section-1 .u-sheet-1 {min-height: 623px}
-.u-section-1 .u-text-1 {margin: 30px auto 0 92px}
+.u-section-1 .u-sheet-1 {min-height: 661px}
+.u-section-1 .u-text-1 {margin: 31px auto 0 92px}
 .u-section-1 .u-image-1 {width: 570px; height: 463px; margin: 60px auto 0}
-.u-section-1 .u-custom-html-1 {min-height: 119px; height: auto; margin: -306px 961px 60px 60px} 
+.u-section-1 .u-custom-html-1 {min-height: 119px; height: auto; margin: -306px 961px 217px 60px} 
 
 @media (max-width: 1199px){ .u-section-1 .u-text-1 {margin-left: 75px}
 .u-section-1 .u-custom-html-1 {width: 570px; margin-right: 821px; margin-left: 0} }
@@ -12,7 +12,7 @@
 @media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 476px}
 .u-section-1 .u-text-1 {margin-left: 43px}
 .u-section-1 .u-image-1 {width: 540px; height: 439px}
-.u-section-1 .u-custom-html-1 {width: 540px; margin-top: -282px; margin-right: 0} }
+.u-section-1 .u-custom-html-1 {width: 540px; margin-top: -282px; margin-right: 0; margin-bottom: 60px} }
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 313px}
 .u-section-1 .u-text-1 {margin-left: 27px}
