--- a/Cad.css
+++ b/Cad.css
@@ -1,23 +1,34 @@
-.u-section-1 .u-sheet-1 {min-height: 500px}
-.u-section-1 .u-image-1 {width: 560px; height: 316px; margin: 0 auto 0 0}
-.u-section-1 .u-image-2 {width: 560px; height: 316px; margin: -316px 0 0 auto}
-.u-section-1 .u-image-3 {width: 560px; height: 316px; margin: 20px auto 0 0}
-.u-section-1 .u-image-4 {width: 560px; height: 316px; object-position: 0% 50%; margin: -316px 0 0 auto}
-.u-section-1 .u-image-5 {width: 358px; height: 526px; margin: 20px auto 60px} 
+.u-section-1 .u-sheet-1 {min-height: 1288px}
+.u-section-1 .u-image-1 {width: 540px; height: 305px; animation-duration: 1000ms; margin: 20px auto 0 20px}
+.u-section-1 .u-image-2 {width: 540px; height: 305px; animation-duration: 1000ms; margin: -305px 20px 0 auto}
+.u-section-1 .u-image-3 {width: 540px; height: 305px; animation-duration: 1000ms; margin: 20px auto 0 20px}
+.u-section-1 .u-image-4 {width: 540px; height: 305px; object-position: 0% 50%; animation-duration: 1000ms; margin: -305px 20px 0 auto}
+.u-section-1 .u-image-5 {width: 358px; height: 526px; animation-duration: 1000ms; margin: 23px auto 0 20px}
+.u-section-1 .u-text-1 {margin: -454px 20px 0 398px}
+.u-section-1 .u-btn-1 {padding: 0}
+.u-section-1 .u-text-2 {margin: -148px 92px 60px auto} 
 
-@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 387px} }
+@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 387px}
+.u-section-1 .u-text-1 {margin-right: 0; margin-left: 218px}
+.u-section-1 .u-text-2 {margin-right: 76px} }
 
-@media (max-width: 991px){ .u-section-1 .u-sheet-1 {min-height: 263px} }
+@media (max-width: 991px){ .u-section-1 .u-sheet-1 {min-height: 263px}
+.u-section-1 .u-text-1 {margin-left: 0}
+.u-section-1 .u-text-2 {margin-right: 58px} }
 
 @media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 161px}
-.u-section-1 .u-image-1 {width: 540px; height: 304px}
-.u-section-1 .u-image-2 {width: 540px; height: 305px; margin-top: -304px}
-.u-section-1 .u-image-3 {width: 540px; height: 305px}
-.u-section-1 .u-image-4 {width: 540px; height: 305px; margin-top: -305px} }
+.u-section-1 .u-image-1 {height: 304px; margin-left: 0}
+.u-section-1 .u-image-2 {margin-top: -304px; margin-right: 0}
+.u-section-1 .u-image-3 {margin-left: 0}
+.u-section-1 .u-image-4 {margin-right: 0}
+.u-section-1 .u-image-5 {margin-top: -140px}
+.u-section-1 .u-text-1 {margin-top: -402px}
+.u-section-1 .u-text-2 {margin-top: -200px; margin-right: 44px} }
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 49px}
 .u-section-1 .u-image-1 {width: 340px; height: 191px}
 .u-section-1 .u-image-2 {width: 340px; height: 192px; margin-top: -191px}
 .u-section-1 .u-image-3 {width: 340px; height: 192px}
 .u-section-1 .u-image-4 {width: 340px; height: 192px; margin-top: -192px}
-.u-section-1 .u-image-5 {width: 340px; height: 500px} }
+.u-section-1 .u-image-5 {width: 340px; height: 500px; margin-top: -76px; margin-left: 0}
+.u-section-1 .u-text-2 {margin-top: -212px; margin-right: 28px} }
