--- a/Cad.css
+++ b/Cad.css
@@ -1,23 +1,40 @@
-.u-section-1 .u-sheet-1 {min-height: 1258px}
-.u-section-1 .u-image-1 {width: 560px; height: 316px; animation-duration: 1000ms; margin: 0 auto 0 0}
-.u-section-1 .u-image-2 {width: 560px; height: 316px; animation-duration: 1000ms; margin: -316px 0 0 auto}
-.u-section-1 .u-image-3 {width: 560px; height: 316px; animation-duration: 1000ms; margin: 20px auto 0 0}
-.u-section-1 .u-image-4 {width: 560px; height: 316px; object-position: 0% 50%; animation-duration: 1000ms; margin: -316px 0 0 auto}
-.u-section-1 .u-image-5 {width: 358px; height: 526px; animation-duration: 1000ms; margin: 20px auto 60px 0} 
+.u-section-1 .u-sheet-1 {min-height: 681px}
+.u-section-1 .u-image-1 {width: 550px; height: 310px; animation-duration: 1000ms; margin: 0 auto 0 0}
+.u-section-1 .u-image-2 {width: 550px; height: 310px; animation-duration: 1000ms; margin: -310px 0 0 auto}
+.u-section-1 .u-image-3 {width: 550px; height: 311px; animation-duration: 1000ms; margin: 40px auto 0 0}
+.u-section-1 .u-image-4 {width: 550px; height: 310px; object-position: 0% 50%; animation-duration: 1000ms; margin: -311px 0 20px auto} 
 
-@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 387px} }
+@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 387px}
+.u-section-1 .u-image-3 {height: 310px}
+.u-section-1 .u-image-4 {margin-top: -310px} }
 
 @media (max-width: 991px){ .u-section-1 .u-sheet-1 {min-height: 263px} }
 
 @media (max-width: 767px){ .u-section-1 .u-sheet-1 {min-height: 161px}
 .u-section-1 .u-image-1 {width: 540px; height: 304px}
-.u-section-1 .u-image-2 {width: 540px; height: 305px; margin-top: -304px}
-.u-section-1 .u-image-3 {width: 540px; height: 305px}
-.u-section-1 .u-image-4 {width: 540px; height: 305px; margin-top: -305px} }
+.u-section-1 .u-image-2 {width: 540px; height: 304px; margin-top: -304px}
+.u-section-1 .u-image-3 {width: 540px; height: 304px}
+.u-section-1 .u-image-4 {width: 540px; height: 304px; margin-top: -196px} }
 
 @media (max-width: 575px){ .u-section-1 .u-sheet-1 {min-height: 49px}
 .u-section-1 .u-image-1 {width: 340px; height: 191px}
-.u-section-1 .u-image-2 {width: 340px; height: 192px; margin-top: -191px}
-.u-section-1 .u-image-3 {width: 340px; height: 192px}
-.u-section-1 .u-image-4 {width: 340px; height: 192px; margin-top: -192px}
-.u-section-1 .u-image-5 {width: 340px; height: 500px} }
+.u-section-1 .u-image-2 {width: 340px; height: 191px; margin-top: -191px}
+.u-section-1 .u-image-3 {width: 340px; height: 191px}
+.u-section-1 .u-image-4 {width: 340px; height: 191px; margin-top: -83px} }.u-section-2 .u-sheet-1 {min-height: 595px}
+.u-section-2 .u-image-1 {width: 358px; height: 526px; animation-duration: 1000ms; margin: 20px auto 0 0}
+.u-section-2 .u-text-1 {animation-duration: 1000ms; margin: -526px 247px 0 auto}
+.u-section-2 .u-text-2 {animation-duration: 1000ms; margin: 20px 212px 60px 378px}
+.u-section-2 .u-btn-1 {padding: 0} 
+
+@media (max-width: 1199px){ .u-section-2 .u-text-1 {margin-right: 204px}
+.u-section-2 .u-text-2 {margin-right: 112px; margin-left: 278px} }
+
+@media (max-width: 991px){ .u-section-2 .u-text-1 {margin-right: 156px}
+.u-section-2 .u-text-2 {margin-right: 2px; margin-left: 168px} }
+
+@media (max-width: 767px){ .u-section-2 .u-text-1 {margin-right: 117px}
+.u-section-2 .u-text-2 {margin-right: 0; margin-left: 0} }
+
+@media (max-width: 575px){ .u-section-2 .u-sheet-1 {min-height: 569px}
+.u-section-2 .u-image-1 {width: 340px; height: 500px}
+.u-section-2 .u-text-1 {margin-top: -500px; margin-right: 74px} }
